deployment/backstage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage-sa
      volumes:
        - name: sa-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  expirationSeconds: 3600
                  audience: api
        - name: fb-storage
          persistentVolumeClaim:
            claimName: filebrowser-storage-pvc
      containers:
        - name: backstage
          image: selfserviceportal.azurecr.io/backstage-app:latest
          ports:
            - containerPort: 7007
          volumeMounts:
            - name: sa-token
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
            - name: fb-storage
              mountPath: /app/app-config.container.yaml
              subPath: backstage/app-config.container.yaml
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: 7007
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      imagePullSecrets:
        - name: acr-creds
