deployment/file-browser.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      volumes:
        - name: fb-db
          persistentVolumeClaim:
            claimName: filebrowser-db-pvc
        - name: fb-storage
          persistentVolumeClaim:
            claimName: filebrowser-storage-pvc
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:latest
          imagePullPolicy: Always
          command:
            - filebrowser
            - --database
            - /data/filebrowser.db
            - --address
            - 0.0.0.0
            - --port
            - "80"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: fb-db
              mountPath: /data
            - name: fb-storage
              mountPath: /srv
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-service
spec:
  selector:
    app: filebrowser
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
