deployment/backstage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /backstage(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backstage-service
                port:
                  number: 80
